--- a/app.css
+++ b/app.css
@@ -351,10 +351,17 @@
   /* Document stylesheet */
 
 nav {
-    font-size: 1.5em;
-    display: flex;
-    justify-content: space-between;
-    border-bottom: solid 2px grey;
+  font-size: 1.5em;
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--nav-background);
+  border-bottom: solid 2px var(--nav-background-border);
+  -webkit-transition: background-color 700ms linear;
+  -ms-transition: background-color 700ms linear;
+  transition: background-color 700ms linear;
+  -webkit-transition: color 700ms linear;
+  -ms-transition: color 700ms linear;
+  transition: color 700ms linear;
 }
 
 ul,li {
@@ -370,7 +377,13 @@ nav ul{
 }
 li a{
   text-decoration: none;
-  color: black;
+  color: var(--text-color);
+  -webkit-transition: background-color 700ms linear;
+  -ms-transition: background-color 700ms linear;
+  transition: background-color 700ms linear;
+  -webkit-transition: color 700ms linear;
+  -ms-transition: color 700ms linear;
+  transition: color 700ms linear;
 }
 .country_flag{
   height:110px;
@@ -379,13 +392,36 @@ li a{
 }
 body{
   display:block;
+}
+button{
+  text-decoration: none;
+  margin:0;
+  padding:0;
+  background: none;
+  border:none;
+  color: var(--text-color);
+  -webkit-transition: background-color 700ms linear;
+  -ms-transition: background-color 700ms linear;
+  transition: background-color 700ms linear;
+  -webkit-transition: color 700ms linear;
+  -ms-transition: color 700ms linear;
+  transition: color 700ms linear;
+}
 
+button:hover{
+  cursor: pointer;
 }
 .list_country{
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  background-color: rgb(237, 237, 237);
+  background-color: var(--background);
+  -webkit-transition: background-color 700ms linear;
+  -ms-transition: background-color 700ms linear;
+  transition: background-color 700ms linear;
+  -webkit-transition: color 700ms linear;
+  -ms-transition: color 700ms linear;
+  transition: color 700ms linear;
 }
 
 .country{
@@ -393,8 +429,14 @@ body{
   display: flex;
   flex-direction: column;
   margin:10px;
-  border: 2px solid black;
-  background-color: white;
+  border: 2px solid var(--text-color);
+  background-color: var(--box-background);
+  -webkit-transition: background-color 700ms linear;
+  -ms-transition: background-color 700ms linear;
+  transition: background-color 700ms linear;
+  -webkit-transition: color 700ms linear;
+  -ms-transition: color 700ms linear;
+  transition: color 700ms linear;
 }
 
 .country_name{
@@ -415,4 +457,12 @@ body{
 }
 .country_contents:last-child{
   padding-bottom: 20px;
+}
+
+:root{
+  --nav-background: white;
+  --background: #ededed;
+  --text-color: black;
+  --box-background: white;
+  --nav-background-border: grey;
 }
