--- a/app.css
+++ b/app.css
@@ -353,7 +353,7 @@
 nav {
   font-size: 1.5em;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   background-color: var(--nav-background);
   border-bottom: solid 2px var(--nav-background-border);
   -webkit-transition: background-color 700ms linear;
@@ -466,3 +466,49 @@ button:hover{
   --box-background: white;
   --nav-background-border: grey;
 }
+
+
+/* Dropdown Button */
+.dropbtn {
+  background-color: var(--box-background);
+  color: var(--text-color);
+  padding: 10.5px 24px;
+  border-radius: 10px;
+  margin:2px;
+  font-size: 16px;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  
+}
+.filterRegion{
+  width:100%;
+  background-color: var(--background);
+}
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: var(--box-background);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: var(--text-color);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: var(--background);}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
